--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -11,7 +11,7 @@
   margin: 1em 0;
 }
 .font {
-  color: #ffed28;
+  color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   margin-top: 10px;
   letter-spacing: 1px;
@@ -26,11 +26,72 @@
   display: inline-block;
   margin: auto;
   text-align: center;
-  color: #ffed28;
+  color: #ffffff;
 }
 .boxText {
-  top: 35%;
+  top: 15%;
 }
 .boxUpload {
-  top: 55%;
+  top: 30%;
+}
+
+/* ---- reset ---- */
+
+body {
+  margin: 0;
+  font:normal 75% Arial, Helvetica, sans-serif;
+}
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 450px;
+  background-color: #183a5f;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+/* ---- stats.js ---- */
+
+.count-particles{
+  background: #000022;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13E8E9;
+  font-size: .8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+
+.js-count-particles{
+  font-size: 1.1em;
+}
+
+#stats,
+.count-particles{
+  -webkit-user-select: none;
+}
+
+#stats{
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+}
+
+.count-particles{
+  display: none;
 }
