--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -69,11 +69,10 @@ canvas {
   position: relative    ;
   width: 100%;
   height: 450px;
-  background-color: #183a5f;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+  background: -webkit-radial-gradient(circle, #000000,#183a5f, #183a5f); /* For Safari 5.1 to 6.0 */
+  background: -o-radial-gradient(circle, #000000, #183a5f, #183a5f); /* For Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(circle, #000000, #183a5f, #183a5f); /* For Fx 3.6 to 15 */
+  background: radial-gradient(circle, #000000, #183a5f, #183a5f); /* Standard syntax (must be last) */
 }
 
 /* ---- stats.js ---- */
