--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -49,6 +49,10 @@ body {
     font-size: 1em;
     line-height: 28px;
 }
+.img-center{
+    margin: 15px auto 0 auto;
+    display: block;
+}
 @media only screen and (max-width: 720px) {
     #boxInfo{padding:0; margin: 0}
 }
