--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -53,6 +53,10 @@ body {
     margin: 15px auto 0 auto;
     display: block;
 }
+h3{
+    font-size: 22px;
+}
+
 @media only screen and (max-width: 720px) {
     #boxInfo{padding:0; margin: 0}
 }
