--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: HelveticaNeueBold,Helvetica,Helvetica,Arial,sans-serif;
 }
+/* ---- navbar ---- */
 .navbar.navbar-default {
     background-color: #ffffff;
     margin-bottom: 0;
@@ -13,6 +14,7 @@ body {
 .navbar-brand>img{
     width: 22px;
 }
+/* ---- upload ---- */
 .btn-default {
     margin: 1em 0;
 }
@@ -32,12 +34,18 @@ body {
 .input-group {
     margin: 3em auto 1em auto;
 }
-.wrap-tutorial {
-    padding: 140px 0;
-}
 #uploadFile:hover{
     color:#eeeeee;
 }
+/* ---- tutorial ---- */
+.wrap-tutorial {
+    padding: 140px 0;
+}
+.img-center{
+    margin: 15px auto 0 auto;
+    display: block;
+}
+/* ---- progress bar ---- */
 .progress{
     position: absolute;
     width: 100%;
@@ -49,68 +57,44 @@ body {
     font-size: 1em;
     line-height: 28px;
 }
-.img-center{
-    margin: 15px auto 0 auto;
-    display: block;
+/* ---- page 2 graphics ---- */
+.highcharts-credits{
+    display: none;
 }
+/* ---- profile ---- */
+.border{
+    border: 0.5px solid #eee;
+    border-radius: 10px;
+    margin: 20px auto;
+}
+.profile-container{
+    display: flex;
+}
+.profile-container:hover{
+    background-color: #eee;
+    border-radius: 10px;
+}
+.image-profile{
+    z-index: 9;
+    border-radius: 100%;
+    width: 150px;
+    height: 150px;
+
+}
+.image-profile:first-child{
+    margin-top: 20px;
+}
+.profile-text>h2{
+    font-weight: 700;
+    font-size: 1em;
+}
+
+/* ---- media queries ---- */
 @media only screen and (max-width: 720px) {
     #boxInfo{padding:0; margin: 0}
+    .image-profile{width:25%; height:25%;}
 }
 @media only screen and (min-width: 721px) and (max-width: 1280px) {
 }
 @media only screen and (min-width: 1281px) {
-}
-/* ---- reset ---- */
-
-canvas {
-  display: block;
-  vertical-align: bottom;
-}
-
-/* ---- particles.js container ---- */
-
-#particles-js {
-  position: relative    ;
-  width: 100%;
-  height: 450px;
-  background: -webkit-radial-gradient(circle, #000000,#183a5f, #183a5f); /* For Safari 5.1 to 6.0 */
-  background: -o-radial-gradient(circle, #000000, #183a5f, #183a5f); /* For Opera 11.6 to 12.0 */
-  background: -moz-radial-gradient(circle, #000000, #183a5f, #183a5f); /* For Fx 3.6 to 15 */
-  background: radial-gradient(circle, #000000, #183a5f, #183a5f); /* Standard syntax (must be last) */
-}
-
-/* ---- stats.js ---- */
-
-.count-particles{
-  background: #000022;
-  position: relative;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles{
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles{
-  -webkit-user-select: none;
-}
-
-#stats{
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-
-.count-particles{
-  display: none;
 }
