--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -139,7 +139,7 @@ tspan {
 @media only screen and (max-width: 720px) {
     #boxInfo{padding:0; margin: 0}
     .image-profile{width:90%; height:90%;margin:0;}
-    .image-inactive{margin: 0; height: 96%; width: 90%;}
+    .inactive{margin: 0; height: 96%; width: 90%;}
     .border-right{border-right: none; padding: 30px 0;}
     .profile-container:first-child, .profile-container{margin:0;}
 }
