--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     background-color: #fcfdfd;
 }
+.red{
+    background: #000;
+}
 /* ---- navbar ---- */
 .navbar.navbar-default {
     background-color: #ffffff;
@@ -76,15 +79,17 @@ h3{
 .border-right{
     border-right: 0.5px solid #eee;
     padding: 0;
+    margin: 22px 0;
 }
 .profile-container{
     display: block;
     padding: 0;
-    margin: 0 23px;
+    padding-bottom: 11%;
+    padding-left: 11.70%;
 }
 .profile-container:first-child{
     border-top-left-radius: 10px;
-    margin-top: 20px;
+    padding-top: 22px;
 }
 .profile-container:last-child{
     border-bottom-left-radius: 10px;
@@ -97,11 +102,17 @@ h3{
 }
 .inactive{
     position: absolute;
-    background-color: rgba(249, 249, 249, 0.7);
+    background-color: rgba(250, 250, 250, 0.7);
     height: 150px;
     width: 150px;
     border-radius: 100%;
     cursor: pointer;
+}
+.inactive:hover{
+    background-color: rgba(158, 158, 158, 0.38);
+}
+.active{
+    background-color: rgba(250, 250, 250, 0);
 }
 .profile-text{
     margin: 15px 5px;
@@ -140,10 +151,14 @@ tspan {
     #boxInfo{padding:0; margin: 0}
     .image-profile{width:90%; height:90%;margin:0;}
     .inactive{margin: 0; height: 96%; width: 90%;}
-    .border-right{border-right: none; padding: 30px 0;}
-    .profile-container:first-child, .profile-container{margin:0;}
+    .border-right{border-right: none; padding: 30px 0;margin:0;}
+    .profile-container:first-child{margin-top:0; padding: 0;} 
+    .profile-container{margin-top:0;margin-bottom: 0;margin-left: 6.55%; padding: 0;}
 }
 @media only screen and (min-width: 721px) and (max-width: 1280px) {
+    .profile-container:first-child{margin-top:0; padding: 0;} 
+    .profile-container{margin-top:0;margin-bottom: 0;margin-left: 7.43%; padding: 0;}
+    .border-right{border-right: none; padding: 30px 0;margin:0;}
 }
 @media only screen and (min-width: 1281px) {
 }
