--- a/05-Sourcecode/03-Frontend/dev/app/css/style.css
+++ b/05-Sourcecode/03-Frontend/dev/app/css/style.css
@@ -100,7 +100,7 @@ h3{
     width: 150px;
     height: 150px;
 }
-.inactive{
+.button{
     position: absolute;
     background-color: rgba(250, 250, 250, 0.7);
     height: 150px;
@@ -108,7 +108,7 @@ h3{
     border-radius: 100%;
     cursor: pointer;
 }
-.inactive:hover{
+.button:hover{
     background-color: rgba(158, 158, 158, 0.38);
 }
 .active{
@@ -150,7 +150,7 @@ tspan {
 @media only screen and (max-width: 720px) {
     #boxInfo{padding:0; margin: 0}
     .image-profile{width:90%; height:90%;margin:0;}
-    .inactive{margin: 0; height: 96%; width: 90%;}
+    .button{margin: 0; height: 96%; width: 90%;}
     .border-right{border-right: none; padding: 30px 0;margin:0;}
     .profile-container:first-child{margin-top:0; padding: 0;} 
     .profile-container{margin-top:0;margin-bottom: 0;margin-left: 6.55%; padding: 0;}
